[package]
name = "pallet-hmtoken"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/hmt"
description = "FRAME HM Token pallet"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false }
frame-support = { version = "2.0.0", default-features = false }
frame-system = { version = "2.0.0", default-features = false }
frame-benchmarking = { version = "2.0.0", default-features = false, optional = true }
sp-runtime = { version = "2.0.0", default-features = false }
sp-std = { default-features = false, version = '2.0.0' }

[dev-dependencies]
sp-core = { version = "2.0.0"  }
sp-io = { version = "2.0.0" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
	"sp-std/std",
]


runtime-benchmarks = [
	"frame-benchmarking",
]

