[package]
authors = ['apopiak@parity.io']
description = 'FRAME pallet defining a simple key-value store.'
edition = '2018'
homepage = 'https://substrate.dev'
name = 'pallet-kvstore'
version = '2.0.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
frame-support = { default-features = false, version = '2.0.1' }
frame-system = { default-features = false, version = '2.0.1' }
sp-std = { default-features = false, version = '2.0.1' }
frame-benchmarking = { version = '2.0.1', default-features = false, optional = true }

[dev-dependencies]
sp-core = { default-features = false, version = '2.0.1' }
sp-io = { default-features = false, version = '2.0.1' }
sp-runtime = { default-features = false, version = '2.0.1' }

[features]
default = ['std']
std = [
    'codec/std',
    "frame-benchmarking/std",
    'frame-support/std',
    'frame-system/std',
    'sp-std/std',
]

runtime-benchmarks = [
	"frame-benchmarking",
]
